--- a/css-files/buy-rent-sell.css
+++ b/css-files/buy-rent-sell.css
@@ -16,6 +16,11 @@
 
 .flex-europe-constiries-box {
     display: flex;
+    border: 2px solid #000000;
+    width: 1400px;
+    margin-left: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .hero-italy-image {
@@ -101,7 +106,7 @@
 .hero-italy-image, .hero-switzerland-image, .hero-scotland-image, .hero-poland-image, .hero-denmark-image {
     margin-top: 75px;
     height: 100px;
-    width: 270px;
+    width: 250px;
     margin-left: 15px;
 }
 
@@ -111,20 +116,20 @@ margin-left: -230px;
 
 .hero-latvia-image, .hero-england-image, .hero-germany-hero, .hero-france-hero, .hero-greece-hero {
     margin-left: 15px;
-    width: 270px;
+    width: 250px;
     height: 100px;
 }
 
 .hero-irland-image, .hero-belgium-hero, .hero-crotia-image, .hero-wales-image, .hero-austria-image, .hero-protugal-image, .hero-luxemborg-image, .hero-monacco-image, .hero-san-marino-image, .hero-gibrator-image {
     height: 100px;
-    width: 270px;
+    width: 250px;
     margin-top: 20px;
     margin-left: 15px;
 }
 
 .category-button {
     height: 50px;
-    width: 268px;
+    width: 248px;
     background-color: #456470;
     margin-top: 30px;
     margin-bottom: 15px;
