--- a/css-files/buy-rent-sell.css
+++ b/css-files/buy-rent-sell.css
@@ -209,6 +209,10 @@ margin-left: -815px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://t4.ftcdn.net/jpg/03/39/91/77/360_F_339917756_IrUxY7fl0taqoWyilK2R2lSwUG3x30ZC.jpg')
 }
 
+.hero-cyprus-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://media.istockphoto.com/id/1349793384/photo/flag-of-cyprus.jpg?s=612x612&w=0&k=20&c=w0IfyvdQxhKTFuWzAPBK5JLdDX8qKspfwnmwldl74Sc=')
+}
+
 .hero-japan-image {
     margin-top: 100px;
     height: 100px;
@@ -224,7 +228,7 @@ margin-left: -815px;
     margin-top: 100px;
 }
 
-.hero-singapore-image, .hero-maledives-image, .hero-armenia-image, .hero-qatar-image {
+.hero-singapore-image, .hero-maledives-image, .hero-armenia-image, .hero-qatar-image, .hero-cyprus-image {
     height: 100px;
     width: 250px;
     margin-left: 18px;
