--- a/css-files/buy-rent-sell.css
+++ b/css-files/buy-rent-sell.css
@@ -221,6 +221,10 @@ margin-left: -815px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://image.cnbcfm.com/api/v1/image/102907446-2170-kyle-lockwood-silver-fern-nz-flag-final-cr-3.png?v=1439208962&w=720&h=405')
 }
 
+.hero-fiji-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://media.istockphoto.com/id/1143935465/photo/fiji-flag.jpg?s=612x612&w=0&k=20&c=Yl2bQNOI1mQ31W52UKzVunO0tkfIPfYzcFm5iyUfUUM=')
+}
+
 .hero-japan-image {
     margin-top: 100px;
     height: 100px;
@@ -229,7 +233,7 @@ margin-left: -815px;
     margin-bottom: 20px;
 }
 
-.hero-philliphs-image, .hero-turkey-image, .hero-sri-lanka-image, .hero-thailand-image, .hero-new-zeland-image {
+.hero-philliphs-image, .hero-turkey-image, .hero-sri-lanka-image, .hero-thailand-image, .hero-new-zeland-image, .hero-fiji-image {
     height: 100px;
     width: 250px;
     margin-left: 20px;
