--- a/css-files/buy-rent-sell.css
+++ b/css-files/buy-rent-sell.css
@@ -225,6 +225,14 @@ margin-left: -815px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://media.istockphoto.com/id/1143935465/photo/fiji-flag.jpg?s=612x612&w=0&k=20&c=Yl2bQNOI1mQ31W52UKzVunO0tkfIPfYzcFm5iyUfUUM=')
 }
 
+.hero-solomon-islands-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://media.istockphoto.com/id/1180031625/photo/solomon-islands-flag.jpg?s=612x612&w=0&k=20&c=uGYtkMLn2E7WM-m9aY2DIhkkgWiXgADwTTPOZ3I0u_A=')
+}
+
+.hero-new-guinea-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://t3.ftcdn.net/jpg/04/52/70/12/360_F_452701234_w2Md0mA4ptiMsatJPTjdgrJeddyH0ICx.jpg')
+}
+
 .hero-japan-image {
     margin-top: 100px;
     height: 100px;
@@ -233,7 +241,7 @@ margin-left: -815px;
     margin-bottom: 20px;
 }
 
-.hero-philliphs-image, .hero-turkey-image, .hero-sri-lanka-image, .hero-thailand-image, .hero-new-zeland-image, .hero-fiji-image {
+.hero-philliphs-image, .hero-turkey-image, .hero-sri-lanka-image, .hero-thailand-image, .hero-new-zeland-image, .hero-fiji-image, .hero-solomon-islands-image, .hero-new-guinea-image {
     height: 100px;
     width: 250px;
     margin-left: 20px;
