--- a/css-files/buy-rent-sell.css
+++ b/css-files/buy-rent-sell.css
@@ -245,6 +245,10 @@ margin-left: -815px;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://i.pinimg.com/originals/85/08/e5/8508e5c2a620e6fbdddb9153b18d130a.jpg')
 }
 
+.hero-kenya-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://media.istockphoto.com/id/801192700/vector/vector-national-flag-of-kenya.jpg?s=612x612&w=0&k=20&c=lQnrq6cESFqHnjE8q9oSPP_7-Io4S-kgntrtngOORUg=')
+}
+
 .hero-japan-image {
     margin-top: 100px;
     height: 100px;
@@ -253,7 +257,7 @@ margin-left: -815px;
     margin-bottom: 20px;
 }
 
-.hero-philliphs-image, .hero-turkey-image, .hero-sri-lanka-image, .hero-thailand-image, .hero-new-zeland-image, .hero-fiji-image, .hero-solomon-islands-image, .hero-new-guinea-image, .hero-tanzania-image, .hero-morocco-image {
+.hero-philliphs-image, .hero-turkey-image, .hero-sri-lanka-image, .hero-thailand-image, .hero-new-zeland-image, .hero-fiji-image, .hero-solomon-islands-image, .hero-new-guinea-image, .hero-tanzania-image, .hero-morocco-image, .hero-kenya-image {
     height: 100px;
     width: 250px;
     margin-left: 20px;
