--- a/css-files/buy-rent-sell.css
+++ b/css-files/buy-rent-sell.css
@@ -365,3 +365,18 @@ margin-left: -815px;
     text-align: center;
     font-size: 20px;
 }
+
+.end-of-option-info-box {
+    background-color: #0C1435;
+    border: 2px solid #000000;
+    color: white;
+    width: 900px;
+    margin-left: 300px;
+    border-radius: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 30px;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
