--- a/css-files/buy-rent-sell.css
+++ b/css-files/buy-rent-sell.css
@@ -398,7 +398,7 @@ margin-left: -815px;
     color: #ffffff;
 }
 
-.hero-italy-image, .hero-switzerland-image, .hero-scotland-image, .hero-poland-image, .hero-denmark-image, .hero-latvia-image, .hero-england-image, .hero-germany-hero, .hero-france-hero, .hero-greece-hero, .hero-belgium-hero, .hero-crotia-image, .hero-irland-image, .hero-wales-image, .hero-austria-image, .hero-luxemborg-image, .hero-protugal-image, .hero-monacco-image, .hero-san-marino-image, .hero-gibrator-image {
+.hero-italy-image, .hero-switzerland-image, .hero-scotland-image, .hero-poland-image, .hero-denmark-image, .hero-latvia-image, .hero-england-image, .hero-germany-hero, .hero-france-hero, .hero-greece-hero, .hero-belgium-hero, .hero-crotia-image, .hero-irland-image, .hero-wales-image, .hero-austria-image, .hero-luxemborg-image, .hero-protugal-image, .hero-monacco-image, .hero-san-marino-image, .hero-gibrator-image, .hero-japan-image, .hero-philliphs-image, .hero-turkey-image, .hero-sri-lanka-image, .hero-thailand-image, .hero-singapore-image, .hero-maledives-image, .hero-armenia-image, .hero-qatar-image, .hero-cyprus-image, .hero-australia-image, .hero-new-zeland-image, .hero-fiji-image, .hero-solomon-islands-image, .hero-new-guinea-image, .hero-edgypt-image, .hero-tanzania-image, .hero-morocco-image, .hero-kenya-image, .hero-ghana-image {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
