--- a/css-files/buy-properties.css
+++ b/css-files/buy-properties.css
@@ -4,10 +4,9 @@
 
 .properties-container {
     height: 300x;
-  width: 600px;
+  width: 500px;
   margin: 50px auto;
   border-radius: 7px 7px 7px 7px;
-  /* VIA CSS MATIC https://goo.gl/cIbnS */
   -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
@@ -16,26 +15,26 @@
 .estate-photo {
     float: left;
   height: 300px;
-  width: 300px;
+  width: 250px;
 }
 
 .estate-photo img {
     height: 300px;
-    width: 300px;
+    width: 250px;
     border-radius: 7px 0 0 7px;
 }
 
 .estate-info {
     float: left;
   height: 300px;
-  width: 300px;
+  width: 240px;
   border-radius: 0 7px 10px 7px;
   background-color: #ffffff;
 }
 
 .estate-info-text {
     height: 300px;
-  width: 300px;
+  width: 250px;
 }
 
 .estate-info-text h1 {
@@ -55,37 +54,23 @@
   overflow: hidden;
 }
 
-.estate-price-and-button {
-    height: 103px;
-  width: 327px;
-  margin-top: 17px;
-  position: absolute;
+.properties-container {
+  margin-left: 50px;
 }
 
-.estate-price-and-button p {
-    display: inline-block;
-    position: absolute;
-    top: -13px;
-    height: 50px;
-    margin: 0 0 0 38px;
-    font-size: 28px;
-    font-weight: lighter;
-    color: #474747;
+.estate-price {
+    float: right;
+    margin-top: -150px;
+    margin-right: 50px;
 }
 
-.estate-button {
-    display: inline-block;
-    height: 50px;
-    width: 176px;
-    margin: 0 40px 0 16px;
-    box-sizing: border-box;
-    border-radius: 60px;
-    font-size: 14px;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 0.2em;
+#estate-button a {
+    float: right;
+    background-color: brown;
+    text-decoration: none;
     color: #ffffff;
-    background-color: #9cebd5;
-    cursor: pointer;
-    outline: none;
+    margin-right: 40px;
+    margin-top: -60px;
+    width: 170px;
+    text-align: center;
 }
