--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -14,26 +14,27 @@
 
 .estate-photo {
     float: left;
-    height: 300px;
+    height: 220px;
     width: 250px;
 }
 
 .estate-photo img {
-    height: 300px;
+    height: 220px;
     width: 250px;
     border-radius: 7px 0 0 7px;
 }
 
 .estate-info {
     float: left;
-  height: 300px;
+  height: 220px;
   width: 240px;
   border-radius: 0 7px 10px 7px;
-  background-color: #ffffff;
+  background-color: #203036;
+  
 }
 
 .estate-info-text {
-    height: 320px;
+    height: 220px;
     width: 250px;
 }
 
@@ -41,14 +42,14 @@
   width: 250px;
   text-align: center;
   font-size: 25px;
-  color: #474747;
+  color: #ffffff;
   margin-top: 5px;
 }
 
 .estate-info-text p {
-    height: 110px;
+    height: 100px;
     text-align: center;
-  color: #8d8d8d;
+  color: #ffffff;
   font-size: 15px;
   font-weight: lighter;
   overflow: hidden;
@@ -60,8 +61,13 @@
 
 .estate-price {
     float: right;
-    margin-top: -150px;
-    margin-right: 50px;
+    margin-top: -115px;
+    margin-right: 70px;
+    color: #ffffff;
+}
+
+.estate-price p {
+  font-size: 25px;
 }
 
 #estate-button a {
@@ -70,7 +76,9 @@
     text-decoration: none;
     color: #ffffff;
     margin-right: 40px;
-    margin-top: -60px;
+    margin-top: -40px;
     width: 170px;
     text-align: center;
+    border-radius: 20px;
+    font-size: 20px;
 }
