--- a/css-files/index-content.css
+++ b/css-files/index-content.css
@@ -95,7 +95,7 @@ body {
   padding-left: 30px;
   padding-top: 5px;
   padding-bottom: 5px;
-  background-color: #456470;
+  background-color: #203036;
   border-radius: 999px;
   font-size: 24px;
   color: white;
@@ -118,7 +118,7 @@ body {
   flex-direction: column;
   width: 330px;
   height: 375px;
-  background-color: #456470;
+  background-color: #203036;
   border-radius: 5px;
   box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
   &:hover {
@@ -179,7 +179,7 @@ body {
   flex-direction: column;
   width: 330px;
   height: 375px;
-  background-color: #456470;
+  background-color: #203036;
   border-radius: 5px;
   box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
 
@@ -228,13 +228,17 @@ body {
   gap: 25px;
 }
 
+.eco-friendly-textbox {
+  color: #203036;
+}
+
 .learn-more-button {
   display: flex;
   justify-content: center;
 }
 
 .learn-more-button a p {
-  background-color: #456470;
+  background-color: #203036;
   padding: 15px;
   border-radius: 999px;
   color: white;
@@ -256,7 +260,7 @@ body {
 }
 
 .content2-selling {
-  background-color: #456470;
+  background-color: #203036;
   margin-bottom: 100px;
   height: 520px;
 }
@@ -275,11 +279,15 @@ body {
   gap: 25px;
 }
 
+.selling-textbox {
+  color: white;
+}
+
 #selling-content-button a p {
   background-color: #D9D9D9;
   padding: 15px;
   border-radius: 999px;
-  color: #456470;
+  color: #203036;
   padding-left: 50px;
   padding-right: 50px;
   font-size: 25px;
@@ -315,6 +323,10 @@ body {
   display: flex;
   flex-direction: column;
   gap: 25px;
+}
+
+.buying-textbox {
+  color: #203036;
 }
 
 .buying-image {
