--- a/css-files/rent.css
+++ b/css-files/rent.css
@@ -1,5 +1,6 @@
 .content {
   display: flex;
+  overflow-x: hidden;
 }
 
 .rent-properties-content {
@@ -21,7 +22,7 @@
     display: flex;
     flex-direction: column;
     width: 485px;
-    height: 580px;
+    height: 560px;
     background-color:#556165;
     border-radius: 5px;
     box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
@@ -45,7 +46,11 @@
     text-align: center;
     align-self: center;
     line-height: 0px;
-    font-size: 25px;
+    font-size: 22px;
+    h2 {
+      font-size: 27px;
+      margin-bottom: 25px;
+    }
   }
 
   .property-text span {
@@ -57,16 +62,28 @@
     display: flex;
     flex-direction: column;
     padding-left: 50px;
+    padding-bottom: 75px;
+    border-radius: 0px 0px 5px 0px;
     color: white;
     width: 100%;
+    height: 100%;
     min-width: 250px;
+    overflow: scroll;
+    p {
+      font-size: 19px;
+      width: 240px;
+      font-style: italic;
+      opacity: 75%;
+      margin-bottom: 0px;
+    }
     h2 {
-      font-size: 33px
+      font-size: 27px
     }
   }
 
   .gobackbutton {
     margin-top: 25px;
+    margin-bottom: 25px;
   }
 
   .gobackbutton a {
@@ -78,9 +95,11 @@
     padding-right: 15px;
     background-color: #203036;
     border-radius: 9999px;
+    opacity: 75%;
     &:hover {
       transform: scale(2.5);
       box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+      opacity: 100%;
     }
   }
 
@@ -89,6 +108,7 @@
     flex-direction: column;
     gap: 15px;
     margin-bottom: 30px;
+    font-size: 22px;
   }
 
   .filtercontainer input {
