--- a/css-files/sell.css
+++ b/css-files/sell.css
@@ -8,6 +8,7 @@
     color: white;
     background-color: #556165;
     border-radius: 5px;
+    height: 92%;
     h2 {
         font-size: 35px;
         margin-bottom: 15px;
@@ -20,8 +21,39 @@
     margin-left: 75px;
 }
 
+.property-user-inputs {
+
+    .property-user-inputs-content {
+
+        .submit-button {
+            margin-top: 100px;
+            a {
+                color: white;
+                background-color: #203036;
+                padding-left: 35px;
+                padding-right: 35px;
+                padding-top: 15px;
+                padding-bottom: 15px;
+                border-radius: 99999px;
+                opacity: 75%;
+                &:hover {
+                    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+                    opacity: 100%;
+                }
+            }
+        }
+
+        .terms-conditions {
+            opacity: 65%;
+            font-size: 22px;
+            margin-right: 10%;
+        }
+
+    }
+}
+
 .filloutform-1 {
-    margin-bottom: 50px;
+    margin-bottom: 100px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -34,22 +66,49 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
     .prop-name-and-location{
         margin-right: 10%;
     }
 }
 
+.filloutform-3-4-5 {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .filloutform-3 {
-    margin-bottom: 50px;
+    margin-bottom: 100px;
+    margin-right: 12%;
+    .bedroom {
+        margin-left: 62px;
+        width: 75px;
+        padding-bottom: 5px;
+    }
+    .kitchen {
+        margin-left: 80px;
+        width: 75px;
+        padding-bottom: 5px;
+    }
+    .living {
+        margin-left: 10px;
+        width: 75px;
+        padding-bottom: 5px;
+    }
+    .floors{
+        margin-left: 15px;
+        width: 75px;
+        padding-bottom: 5px;
+    }
 }
 
 .filloutform-4 {
-    margin-bottom: 50px;
+    margin-right: 12%;
+    margin-bottom: 100px;
 }
 
 .filloutform-5 {
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
 
 .filloutform-6 {
@@ -88,3 +147,4 @@
     width: 700px;
     padding-bottom: 200px;
 }
+
