--- a/css-files/sell.css
+++ b/css-files/sell.css
@@ -6,7 +6,7 @@
     margin-top: 2.5%;
     margin-bottom: 5%;
     color: white;
-    background-color: #556165;
+    background-color: #203036;
     border-radius: 5px;
     height: 92%;
     h2 {
@@ -27,9 +27,10 @@
 
         .submit-button {
             margin-top: 100px;
+            margin-bottom: 40px;
             a {
-                color: white;
-                background-color: #203036;
+                color: #203036;
+                background-color: white;
                 padding-left: 35px;
                 padding-right: 35px;
                 padding-top: 15px;
