--- a/css-files/property-details.css
+++ b/css-files/property-details.css
@@ -3,15 +3,15 @@
 .content {
     margin-top: 75px;
     margin-bottom: 100px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 8%;
+    margin-right: 1%;
     display: flex;
     flex-wrap: wrap;
     gap: 25px;
 
     .property-looks img {
-        width: 875px;
-        height: 675px;
+        max-width: 875px;
+        height: 750px;
         object-fit: cover;
         border-radius: 5px;
     }
@@ -33,9 +33,19 @@
             font-size: 25px;
             line-height: 10px;
         }
+        h3 {
+            font-size: 30px;
+            line-height: 0px;
+            margin-top: 60px;
+        }
         .property-rooms {
             display: flex;
             flex-wrap: wrap;
+            margin-top: 0px;
+            padding: 0px;
+        }
+        .property-location iframe {
+            height: 275px;
         }
     }
 }
