--- a/css-files/property-details.css
+++ b/css-files/property-details.css
@@ -63,32 +63,12 @@
     }
 
     .contact {
-
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-        gap: 0px;
-
-        .seller {
-            width: 100%;
-            display: flex;
-            flex-direction: row;
-            gap: 15px;
-            align-items: center;
-    
-            h2 {
-                font-size: 33px;
-            }
-    
-            i {
-                font-size: 25px;
-                padding: 15px;
-                border: 2px solid #203036;
-                border-radius: 99999px;
-            }
-        }
 
         .submit {
+            padding-right: 35px;
             width: 100%;
             height: 100%;
             color: #203036;
@@ -101,19 +81,21 @@
             h2 {
                 font-size: 30px;
             }
-            .submit-button {
-                padding-top: 50px;
-                 a{
-                    color: white;
-                    background-color: #203036;
-                    padding-left: 15px;
-                    padding-right: 15px;
-                    padding-top: 5px;
-                    padding-bottom: 5px;
-                    border-radius: 99999px;
-                }
-            }
-        }
     }
-    
+}
+
+
+.submit-button {
+    display: flex;
+    width: 175px;
+    padding-top: 50px;
+     a{
+        color: white;
+        background-color: #203036;
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        border-radius: 99999px;
+    }
 }
