--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -1,6 +1,6 @@
 .wrap { flex-wrap: wrap; }
 
-.estate-naples {
+.estate-naples, .estate-rome, .estate-venice, .estate-florence {
     display: flex;
 }
 
@@ -97,7 +97,7 @@
     border: 1px solid #ffffff;
 }
 
-.estate-naples h2 {
+.estate-naples h2, .estate-rome h2, .estate-venice h2, .estate-florence h2 {
   text-align: center;
   margin-left: 550px;
 }
@@ -108,6 +108,6 @@
 }
 
 .properties-container-one {
-  margin-top: 130px;
+  margin-top: 30px;
   margin-left: 20px;
 }
