--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -104,10 +104,15 @@
 
 .properties-container {
   margin-top: 130px;
-  margin-left: -830px;
+  margin-left: -890px;
 }
 
 .properties-container-one {
   margin-top: 30px;
-  margin-left: 20px;
+  margin-left: 30px;
+}
+
+.properties-container-naples-house-2 {
+  margin-top: 130px;
+  margin-left: 40px;
 }
