--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -116,3 +116,8 @@
   margin-top: 130px;
   margin-left: 40px;
 }
+
+.properties-container-naples-house-three {
+  margin-top: 30px;
+  margin-left: 20px;
+}
