--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -121,3 +121,8 @@
   margin-top: 30px;
   margin-left: 20px;
 }
+
+.properties-container-naples-house-four {
+  margin-top: 30px;
+  margin-left: 40px;
+}
