--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -126,3 +126,8 @@
   margin-top: 30px;
   margin-left: 40px;
 }
+
+.properties-container-naples-house-five {
+  margin-top: 30px;
+  margin-left: 365px;
+}
