--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -122,7 +122,7 @@
   margin-left: 20px;
 }
 
-.properties-container-naples-house-four {
+.properties-container-naples-house-four, .properties-container-rome-house {
   margin-top: 30px;
   margin-left: 40px;
 }
@@ -131,3 +131,4 @@
   margin-top: 30px;
   margin-left: 365px;
 }
+
