--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -127,7 +127,7 @@
   margin-left: 40px;
 }
 
-.properties-container-naples-house-five {
+.properties-container-naples-house-five, .properties-container-rome-house-three {
   margin-top: 30px;
   margin-left: 365px;
 }
