--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -132,7 +132,7 @@
   margin-left: 365px;
 }
 
-.properties-container-rome-house-one, .properties-container-venice-house {
+.properties-container-rome-house-one, .properties-container-venice-house, .properties-container-venice-house-two {
   margin-top: 30px;
   margin-left: 30px;
 }
