--- a/css-files/property-details.css
+++ b/css-files/property-details.css
@@ -61,7 +61,6 @@
             font-size: 32px;
         }
     }
-
     .contact {
         display: flex;
         flex-direction: column;
@@ -81,6 +80,7 @@
             h2 {
                 font-size: 30px;
             }
+    }
     }
 }
 
