--- a/css-files/index-content.css
+++ b/css-files/index-content.css
@@ -106,6 +106,9 @@ body {
   margin-top: 100px;
   margin-bottom: 100px;
   margin-left: 150px;
+  h2 {
+    color: #203036;
+  }
 }
 
 .properties {
