--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -127,7 +127,7 @@
   margin-left: 40px;
 }
 
-.properties-container-naples-house-five, .properties-container-rome-house-three, .properties-container-venice-last {
+.properties-container-naples-house-five, .properties-container-rome-house-three, .properties-container-venice-last, .properties-container-florence-last {
   margin-top: 30px;
   margin-left: 365px;
 }
@@ -140,4 +140,8 @@
 .properties-container-venice, .properties-container-florence {
   margin-top: 20px;
   margin-left: 40px;
+}
+
+.properties-container-florence-last {
+  margin-bottom: 30px;
 }
