--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -145,3 +145,15 @@
 .properties-container-florence-last {
   margin-bottom: 30px;
 }
+
+#page-location-info-box {
+  background-color: #0C1435;
+  width: 900px;
+  margin-left: 250px;
+  color: #ffffff;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 25px;
+  padding: 5px 5px 5px 5px;
+  margin-top: 20px;
+}
