--- a/css-files/index-content.css
+++ b/css-files/index-content.css
@@ -100,6 +100,9 @@ body {
   font-size: 24px;
   color: white;
   box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
+  &:hover {
+    background-color: green;
+  }
 }
 
 .content1-properties {
@@ -248,6 +251,11 @@ body {
   padding-left: 50px;
   padding-right: 50px;
   font-size: 25px;
+  border: solid 2px #203036;
+  &:hover {
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.578);
+    border: solid 2px white;
+  }
 }
 
 .eco-friendly-image {
@@ -294,6 +302,11 @@ body {
   padding-left: 50px;
   padding-right: 50px;
   font-size: 25px;
+  border: solid 2px #D9D9D9;
+  &:hover {
+    box-shadow: 2px 2px 10px 2px rgba(255, 255, 255, 0.578);
+    border: solid 2px #203036;
+  }
 }
 
 .selling-image {
