--- a/css-files/property-details.css
+++ b/css-files/property-details.css
@@ -1,52 +1,15 @@
-
+body {
+    overflow-x: hidden;
+}
 
 .content {
+    width: 100%;
     margin-top: 75px;
     margin-bottom: 100px;
-    margin-left: 8%;
-    margin-right: 1%;
+    margin-left: 5%;
     display: flex;
     flex-wrap: wrap;
-    gap: 25px;
     color: #203036;
-
-    .property-looks img {
-        max-width: 875px;
-        height: 750px;
-        object-fit: cover;
-        border-radius: 5px;
-    }
-    .property-info {
-
-        margin-top: 0px;
-
-        h1 {
-            font-size: 40px;
-            font-weight: bolder;
-            margin: 0px;
-        }
-        p {
-            font-size: 25px;
-        }
-        h2 {
-            font-size: 25px;
-            line-height: 10px;
-        }
-        h3 {
-            font-size: 30px;
-            line-height: 0px;
-            margin-top: 60px;
-        }
-        .property-rooms {
-            display: flex;
-            flex-wrap: wrap;
-            margin-top: 0px;
-            padding: 0px;
-        }
-        .property-location iframe {
-            height: 275px;
-        }
-    }
     .property-description {
         max-width: 1400px;
         margin-right: 10%;
@@ -81,6 +44,101 @@
                 font-size: 30px;
             }
     }
+    }
+}
+
+.content-looks-info {
+    display: inline-flex;
+    gap: 3%;
+}
+
+.property-info {
+    margin-top: 0px;
+    width: 39.6%;
+    padding-right: 0px;
+
+    h1 {
+        font-size: 40px;
+        font-weight: bolder;
+        margin: 0px;
+    }
+    p {
+        font-size: 25px;
+    }
+    h2 {
+        font-size: 25px;
+        line-height: 10px;
+    }
+    h3 {
+        font-size: 30px;
+        line-height: 0px;
+        margin-top: 60px;
+    }
+    .property-rooms {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 0px;
+        padding: 0px;
+    }
+    .property-location iframe {
+        height: 275px;
+    }
+}
+
+.property-looks {
+    max-width: 875px;
+    max-height: 750px;
+    position: relative;
+
+    .slides {
+
+        /* display: none; */
+
+        img {
+            width: 100%;
+            object-fit: cover;
+            border-radius: 5px;
+        }
+    }
+
+    .prev, .next {
+        cursor: pointer;
+        position: absolute;
+        top: 45%;
+        width: auto;
+        padding: 16px;
+        color: white;
+        font-weight: bold;
+        font-size: 18px;
+        user-select: none;
+        transition: 0.1s ease;
+        background-color: #203036;
+        &:hover {
+            font-size: 25px;
+            padding: 12.7px;
+        }
+    }
+    .next {
+        right: 0;
+    }
+
+    .photo-room {
+        width: 25%;
+        text-align: center;
+        font-size: 20px;
+        position: absolute;
+        top: 81.6%;
+        left: 35%;
+        color: #203036;
+        p {
+            background-color: white;
+            padding-left: 30px;
+            padding-right: 30px;
+            padding-top: 5px;
+            padding-bottom: 10px;
+            width: 100%;
+            border-radius: 999px 999px 0px 0px;
+        }
     }
 }
 
