--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -1,6 +1,6 @@
 .wrap { flex-wrap: wrap; }
 
-.estate-naples, .estate-rome, .estate-venice, .estate-florence {
+.estate-naples, .estate-rome, .estate-venice, .estate-florence, .flex-three-info-boxes {
     display: flex;
 }
 
