--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -156,4 +156,26 @@
   font-size: 25px;
   padding: 5px 5px 5px 5px;
   margin-top: 20px;
+  border: 2px solid #000000;
+}
+
+#page-location-info-box h1 {
+  font-size: 30px;
+}
+
+#book-a-tour-info-box, #price-info-box, #building-maybe-box {
+  width: 450px;
+  font-size: 20px;
+  display: flex;
+  background-color: #203036;
+  border-radius: 20px;
+  margin-left: 25px;
+  margin-top: 20px;
+  color: #ffffff;
+  text-align: center;
+  border: 2px solid #000000;
+}
+
+#book-a-tour-info-box h1, #price-info-box h1, #building-maybe-box h1 {
+  font-size: 25px;
 }
