--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -190,3 +190,11 @@
   height: 350px;
   margin-top: 85px;
 }
+
+.properties-geneva {
+  margin-left: 20px;
+}
+
+.estate-geneva h2 {
+  text-align: center;
+}
