--- a/css-files/property-cards.css
+++ b/css-files/property-cards.css
@@ -1,6 +1,6 @@
 .wrap { flex-wrap: wrap; }
 
-.estate-naples, .estate-rome, .estate-venice, .estate-florence, .flex-three-info-boxes {
+.estate-naples, .estate-rome, .estate-venice, .estate-florence, .flex-three-info-boxes, .estate-geneva {
     display: flex;
 }
 
@@ -196,5 +196,15 @@
 }
 
 .estate-geneva h2 {
-  text-align: center;
+  margin-left: 500px;
+}
+
+.properties-geneva {
+  margin-top: 150px;
+  margin-left: -850px;
+}
+
+.properties-geneva-house {
+  margin-left: 40px;
+  margin-top: 150px;
 }
