--- a/css-files/property-details.css
+++ b/css-files/property-details.css
@@ -10,9 +10,12 @@ body {
     display: flex;
     flex-wrap: wrap;
     color: #203036;
+
     .property-description {
+
         max-width: 1400px;
         margin-right: 10%;
+        margin-top: 50px;
         p {
            font-size: 25px; 
            strong{
@@ -25,6 +28,7 @@ body {
         }
     }
     .contact {
+        margin-top: 50px;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
@@ -113,9 +117,11 @@ body {
         user-select: none;
         transition: 0.1s ease;
         background-color: #203036;
+        opacity: 75%;
         &:hover {
             font-size: 25px;
             padding: 12.7px;
+            opacity: 100%;
         }
     }
     .next {
@@ -153,8 +159,6 @@ body {
     padding-bottom: 5px;
     border-radius: 0px 0px 999px 0px;
 }
-
-
 
 
 .submit-button {
