--- a/css-files/rent.css
+++ b/css-files/rent.css
@@ -7,14 +7,14 @@
   margin-top: 100px;
   margin-bottom: 100px;
   margin-left: 5%;
-  margin-right: 5%;
+  margin-right: 1%;
 }
 .rentals {
   display: inline-flex;
   justify-self: flex-start;
   align-items: center;
   flex-wrap: wrap;
-  gap: 7%;
+  gap: 5%;
 }
 
 .property {
@@ -65,7 +65,7 @@
     padding-bottom: 75px;
     border-radius: 0px 0px 5px 0px;
     color: white;
-    width: 100%;
+    width: 250px;
     height: 100%;
     min-width: 250px;
     overflow: scroll;
@@ -117,3 +117,55 @@
     width: 25px;
   }
 
+  @media (max-width: 1492px) {
+
+    .rent-properties-content {
+      margin-top: 75px;
+      margin-bottom: 75px;
+    }
+    
+    .property {
+      width: 450px;
+    }
+    .property img {
+      width: 450px;
+      height: 350px;
+    }
+
+    .top-filter-rent {
+      width: 150px;
+    }
+  }
+
+  @media (max-width: 1409px) {
+    .rent-properties-content {
+      margin-top: 50px;
+      margin-bottom: 50px;
+      margin-left: 1%;
+      margin-right: 0.5%;
+    }
+
+    .rentals {
+      gap: 2%;
+    }
+
+    .property {
+      width: 400px;
+    }
+    .property img {
+      width: 400px;
+      height: 350px;
+    }
+    .top-filter-rent {
+      padding-left: 25px;
+      padding-bottom: 45px;
+      width: 200px;
+      p {
+        font-size: 17px;
+        width: 200px;
+      }
+      h2 {
+        font-size: 25px
+      }
+    }
+  }
