--- a/css-files/rent.css
+++ b/css-files/rent.css
@@ -91,18 +91,17 @@
     margin-bottom: 25px;
   }
 
-  .gobackbutton a {
+  .gobackbutton button {
     color: white;
-    font-size: 20px;
-    list-style: none;
+    font-size: 17px;
     padding: 5px;
     padding-left: 15px;
     padding-right: 15px;
     background-color: #203036;
     border-radius: 9999px;
     opacity: 75%;
+    border: solid 2px #203036;
     &:hover {
-      transform: scale(2.5);
       box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.3);
       opacity: 100%;
     }
